Set overflow-y on listing detail container as well. Fix pagination not working after clicking 'back' on listing detail in responsive view by reconnecting paginator click handler.

--- a/terpbooks/assets/css/styles.css
+++ b/terpbooks/assets/css/styles.css
@@ -236,6 +236,10 @@
 
 /* Styles for listing info stuff buy.html */
 
+.listing-info {
+    overflow-y: auto;
+}
+
 .listing-info > p {
     margin-left: 30px;
     font-size: 20px;
